# CTS-Daemon

./: .gitignore  CHANGES.md  CHANGES_v4.7_cleanup.md  CMakeLists.txt  README.md  build.sh  build_pack.py  changelog.md  cts_modefix.diff  update.json
.github/workflows/: build.yml  cleanup.yml
Json/: config.json  config_7P3.json  config_8E.json  config_8E5.json  config_8G1.json  config_8G2.json  config_8G3.json  config_8G5.json  config_D9300.json  config_D9400.json  perapp_powermode.txt
conf/: MTK720.ini  MTK8100.ini  SDM7G2+.ini  SDM7sG2.ini  SDM855.ini  SDM865.ini  SDM870.ini  SDM888.ini  SDM8G1+.ini  SDM8G1.ini  SDM8G2.ini  SDM8G3.ini
include/: Config.hpp  Function.hpp  JsonConfig.hpp  LibUtils.hpp  License.hpp  Logger.hpp  SceneDetector.hpp  StatusReporter.hpp  TrialGuard.hpp  Utils.hpp  scheduler.hpp
include/Json/: json.h  json.hpp  memory.h  memory.hpp  object.h  string.h  string.hpp  vector.h  vector.hpp
license-server/: .env.example  .gitignore  Dockerfile  README.md  db.js  init-db.js  package-lock.json  package.json  server.js
license-server/api/: index.js
license-server/public/: buy.html  index.html
src/: main.cpp
